add: layout/structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <title>trillo</title>
   </head>
   <body>
-    THIS IS A TEXT
+    <div class="container">
+      <header class="header">Header part</header>
+      <div class="content">
+        <nav class="sidebar">Navigation</nav>
+        <main class="hotel-view">Hotel View</main>
+      </div>
+    </div>
   </body>
 </html>
