--- a/index.html
+++ b/index.html
@@ -94,7 +94,58 @@
           </ul>
           <div class="legal">&copy; 2025 by Trillo. All rights reserved.</div>
         </nav>
-        <main class="hotel-view">Hotel View</main>
+        <main class="hotel-view">
+          <div class="gallery">
+            <figute class="gallery__item"
+              ><img
+                src="img/hotel-1.jpg"
+                alt="Photo of hotel 1"
+                class="gallery__photo"
+            /></figute>
+            <figute class="gallery__item"
+              ><img
+                src="img/hotel-2.jpg"
+                alt="photo ofhotel 2"
+                class="gallery__photo"
+            /></figute>
+            <figute class="gallery__item"
+              ><img
+                src="img/hotel-3.jpg"
+                alt="photo ofhotel 2"
+                class="gallery__photo"
+            /></figute>
+          </div>
+          <div class="overview">
+            <h1 class="overview__heading">Hotel Malibu</h1>
+            <div class="overview__stars">
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+              <svg class="overview__icon-star">
+                <use xlink:href="img/sprite.svg#icon-star"></use>
+              </svg>
+            </div>
+            <div class="overview__location">
+              <svg class="overview__icon-location-pin">
+                <use xlink:href="img/sprite.svg#icon-location-pin"></use>
+              </svg>
+              <button class="btn-inline">Los Angeles, California</button>
+            </div>
+            <div class="overview__rating">
+              <div class="overview__rating-average">8.6</div>
+              <div class="overview__rating-count">729 ratings</div>
+            </div>
+          </div>
+        </main>
       </div>
     </div>
   </body>
