--- a/index.html
+++ b/index.html
@@ -145,6 +145,56 @@
               <div class="overview__rating-count">729 ratings</div>
             </div>
           </div>
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi
+                nisi dignissimos debitis ratione sapiente saepe. Accusantium
+                cumque, quas, ut corporis incidunt deserunt quae architecto
+                voluptate.
+              </p>
+              <p class="paragraph">
+                Accusantium cumque, quas, ut corporis incidunt deserunt quae
+                architecto voluptate delectus, inventore iure aliquid aliquam.
+              </p>
+              <ul class="list">
+                <li class="list__item">Close to the beach</li>
+                <li class="list__item">Breakfast Included</li>
+                <li class="list__item">Lorem, ipsum dolor.</li>
+                <li class="list__item">Lorem ipsum dolor sit.</li>
+                <li class="list__item">Lorem ipsum dolor sit amet.</li>
+                <li class="list__item">Lorem, ipsum.</li>
+                <li class="list__item">Lorem, ipsum dolor.</li>
+                <li class="list__item">Lorem, ipsum dolor.</li>
+              </ul>
+              <div class="recomment">
+                <p class="recomment__count"></p>
+                <div class="recomment__friends">
+                  <img
+                    src="img/user-3.jpg"
+                    alt="Friend 1"
+                    class="recomment__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="Friend 2"
+                    class="recomment__photo"
+                  />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="Friend 3"
+                    class="recomment__photo"
+                  />
+                  <img
+                    src="img/user-6.jpg"
+                    alt="Friend 4"
+                    class="recomment__photo"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">user review</div>
+          </div>
         </main>
       </div>
     </div>
