add: section description pt-2 (list)

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                 <li class="list__item">Lorem, ipsum dolor.</li>
               </ul>
               <div class="recomment">
-                <p class="recomment__count"></p>
+                <p class="recomment__count">
+                  Sahil and 3 others recomment this hotel
+                </p>
                 <div class="recomment__friends">
                   <img
                     src="img/user-3.jpg"
