--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </ul>
               <div class="recomment">
                 <p class="recomment__count">
-                  Sahil and 3 others recomment this hotel
+                  Sahil and 3 others recomment this hotel.
                 </p>
                 <div class="recomment__friends">
                   <img
