add: section review done

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                   <div class="review__rating">7.6</div>
                 </figcaption>
               </figure>
+              <button class="btn-inline">Show all <span>&rarr;</span></button>
             </figure>
           </div>
         </main>
