--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
               </div>
             </div>
-            <figure class="user-reviews">
+            <div class="user-reviews">
               <figure class="review">
                 <blockquote class="review__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
@@ -234,7 +234,16 @@
                 </figcaption>
               </figure>
               <button class="btn-inline">Show all <span>&rarr;</span></button>
-            </figure>
+            </div>
+          </div>
+          <div class="cta">
+            <div class="cta__book-now">
+              Good news! We have four free rooms for your selected dates!
+            </div>
+            <button class="btn">
+              <span class="btn__visible">Book Now</span>
+              <span class="btn__invisible"> Only 4 rooms left</span>
+            </button>
           </div>
         </main>
       </div>
